--- a/ksite.css
+++ b/ksite.css
@@ -1,6 +1,9 @@
 html,body{
 	overflow-x:hidden !important;
-
+	-webkit-transition:all 0.65s;
+	-moz-transition:all 0.65s;
+	transition:all 0.65s;
+	background:#000;
 }
 @font-face {
     font-family: Samarkan;
@@ -387,9 +390,30 @@ li ul{
 }
 
 @media all and (max-width: 599px) and (min-width: 320px) {
+
 	.subscribe{
-	text-align: center;
-}
+	margin-top:10px;	
+	background:#d9534f !important;
+	}
+
+	/*hospi*/
+	.long-line, .longer-line{
+		background:#000 !important;
+	}
+	.hospi_content{
+		margin-top:400px;
+	}
+	.close{
+	font-size: 35px !important;
+    margin-bottom: 101px;
+    margin-left: 36%;
+    padding-bottom: 0;
+    position: absolute;
+    text-align: center;
+    top: -35px;
+    left:-113px;
+    color:#fff !important;
+	}
 	.top,.left,.right{
 		margin-top:50px;
 	}
@@ -465,17 +489,24 @@ ul li.eventCircleNav{
 }
 
 @media all and (min-width: 960px) {
-.subscribe{
-		margin-top:-10px;
-	margin-left:35px;
 
+.hospi_content{
+	 margin-top:100px;
+ 
+}
+li span{
+top:10px;
+}
+
+	
+.subscribe{
+margin-top:15px;
+background:#d9534f !important;
+margin-left:50px;
 }
 /*menuitem*/
 	.smalleritem{
 	width:75px !important;
-}
-.smalleritem .text{
-	margin-top:-5px !important;
 }
 
 	.top,.left,.right{
@@ -682,4 +713,134 @@ transform:rotateX(100deg);
 	font-size: 20px;
 	margin-top:7px;
 	
+}
+
+.left15{
+  margin-left:-15px;
+}
+
+.long-line{
+  margin-top:50px;
+  width:100%;
+  height:5px;
+  background:#fff;
+
+}
+.longer-line{
+  height:5px; position:absolute;
+   -webkit-transition:all 0.65s;
+  -moz-transition:all 0.65s;
+  transition:all 0.65s;
+ 
+}
+.long-line .node{
+  width:60px;
+  height:60px;
+  background:indigo;
+  border-radius:50%;
+  margin-bottom:100px;
+  text-align: center;
+  margin-top:-30px;
+  position:relative;
+  /**change this in 320px **/
+  margin-left:40px;
+  border:3px solid #fff;
+  cursor: pointer;
+  color:#fff;
+  box-shadow:0px 2px 2px rgba(255,255,255,0.2);
+  -webkit-transition:all 0.4s;
+  -moz-transition:all 0.4s;
+  transition:all 0.4s;
+  z-index:10;
+}
+.node::after{
+  content:'';
+  position: absolute;
+  border-top:8px solid #fff;
+  border-left:8px solid transparent;
+  border-right:8px solid transparent;
+  left:35%;
+  position:absolute;
+  transition:all 0.3s;
+  bottom:20px;
+  opacity:0;
+  z-index:1;
+}
+.node:hover:after{
+  opacity:1;
+  bottom:-14px;
+}
+.node .btmText{
+  position: relative;
+  font-size:12px;
+  font-family:'Roboto',sans-serif;
+  font-weight:700;
+  text-align: center;
+  /* without extra stuff */
+  /*top:5px;*/
+  top:10px;
+}
+.node .hospi_icon{
+  font-size:35px;
+  line-height: 1.5;
+}
+.node:hover{
+  background:crimson;
+  box-shadow: -3px -3px 20px rgba(255,255,255,0.1),
+              -3px 3px 20px rgba(255,255,255,0.1),
+              3px -3px 20px rgba(255,255,255,0.1),
+              3px 3px 20px rgba(255,255,255,0.1)  ;
+  transform:scale(1.2);
+   }
+  .node-active{
+    background:crimson !important;
+    box-shadow: -3px -3px 20px rgba(255,255,255,0.1),
+              -3px 3px 20px rgba(255,255,255,0.1),
+              3px -3px 20px rgba(255,255,255,0.1),
+              3px 3px 20px rgba(255,255,255,0.1)  !important;
+  }
+.hospi_content{
+  margin-bottom:30px;
+  width:100%;
+  height:auto;
+  box-shadow:0px 3px 3px rgba(255,255,255,0.3);
+  background:#fff;
+  /* change margin for mobile */
+  color:#333;
+  padding-bottom: 10px;
+  opacity:0;
+  transform:rotateX(60deg) rotateY(88deg) translateY(400px);
+  -webkit-transition:all 0.55s;
+  -moz-transition:all 0.55s;
+  transition:all 0.55s;
+ 
+}
+.hospi_content .header{
+  width:100%;
+  height:200px;
+  background:indigo;
+  padding-left:0;
+  padding-right:0;
+  margin-bottom: 30px;
+}
+
+.hospi_content .title{
+  border-bottom:2px solid #333;
+  padding-bottom:15px;
+}
+.hospi_desc{
+  margin-top:20px;
+  padding-left:25px;
+  padding-right:25px;
+  text-align: justify;
+}
+.hospi_desc p{
+  color:#333;
+  font-size:16px;
+  line-height:1.9;
+
+}
+.hospi_animated{
+	transform:rotateX(0deg) rotateY(0deg) translateY(0px);
+	opacity:1;
 }
